objects/BMCServiceDesk__SRM_ProcessControl__c.object
<CustomObject>
    <description>Stores the conditions that are used to invoke the processes defined for the service request definition.</description>
    <fields>
        <fullName>BMCServiceDesk__FKFulfillmentInputs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment Inputs</label>
        <referenceTo>BMCServiceDesk__SRM_FulfillmentInputs__c</referenceTo>
        <relationshipName>Fulfillment_Conditional_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKProcessTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process</label>
        <referenceTo>BMCServiceDesk__SRM_ProcessTemplate__c</referenceTo>
        <relationshipName>Fulfillment_Conditional_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InputValues__c</fullName>
        <label>Input Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__StoredValues__c</fullName>
        <label>Stored Values</label>
        <type>TextArea</type>
    </fields>
    <label>Process Control</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Process Control #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>